tests/errors/syn_class_var11.java
public class syn_class_var11 {
public static int[] ;
}